Bug 1907135 - Do not treat GPU process loss as unstable whilst application is in background. r=aosmond

Rather than determine whether the previous GPU process was stable or
unstable when launching the subsequent process, do so immediately
following the process loss. This allows us to check the application's
foreground/background state at the time of the loss, and ensure that
we do not treat the process as unstable if we are killed whilst in the
background.

This is desireable because background process kills are expected
behavior on Android, and not in any way indicitive of the GPU process
being unstable. Treating them as unstable was leading to fallback to
software rendering and eventually the gpu process being disabled. This
patch is attempting to prevent that from occuring.

Previously added code that treated GPU processes that were *launched*
whilst in the background as stable can be removed, as it is no longer
required with this change.

Differential Revision: https://phabricator.services.mozilla.com/D217460