gfx/ipc/GPUProcessManager.cpp
@@ -214,6 +214,17 @@ void GPUProcessManager::ResetProcessStable() {
 }
 
 bool GPUProcessManager::IsProcessStable(const TimeStamp& aNow) {
+#ifdef MOZ_WIDGET_ANDROID
+  // On Android if the process is lost whilst in the background it was probably
+  // killed by the OS, and it may never have had a chance to have been declared
+  // stable prior to being killed. We don't want this happening repeatedly to
+  // result in the GPU process being disabled, so treat any process lost whilst
+  // in the background as stable.
+  if (!mAppInForeground) {
+    return true;
+  }
+#endif
+
   if (mTotalProcessAttempts > 0) {
     auto delta = (int32_t)(aNow - mProcessAttemptLastTime).ToMilliseconds();
     if (delta < StaticPrefs::layers_gpu_process_stable_min_uptime_ms()) {
@@ -249,32 +260,10 @@ bool GPUProcessManager::LaunchGPUProcess() {
   // Start the Vsync I/O thread so can use it as soon as the process launches.
   EnsureVsyncIOThread();
 
-  // If the previous process didn't live long enough, increment our unstable
-  // attempts counter so that we don't end up in a restart loop. If the process
-  // did live long enough, reset the counter so that we don't disable the
-  // process too eagerly.
-  auto newTime = TimeStamp::Now();
-  if (IsProcessStable(newTime)) {
-    mUnstableProcessAttempts = 0;
-  } else {
-    mUnstableProcessAttempts++;
-    mozilla::glean::gpu_process::unstable_launch_attempts.Set(
-        mUnstableProcessAttempts);
-  }
   mTotalProcessAttempts++;
   mozilla::glean::gpu_process::total_launch_attempts.Set(mTotalProcessAttempts);
-  mProcessAttemptLastTime = newTime;
+  mProcessAttemptLastTime = TimeStamp::Now();
   mProcessStable = false;
-
-  // If the process is launched whilst we're in the background it may never get
-  // a chance to be declared stable before it is killed again. We don't want
-  // this happening repeatedly to result in the GPU process being disabled, so
-  // we assume that processes launched whilst in the background are stable.
-  if (!mAppInForeground) {
-    gfxCriticalNote
-        << "GPU process is being launched whilst app is in background";
-    mProcessStable = true;
-  }
 
   std::vector<std::string> extraArgs;
   ipc::ProcessChild::AddPlatformBuildID(extraArgs);
@@ -919,6 +908,18 @@ void GPUProcessManager::OnProcessUnexpectedShutdown(GPUProcessHost* aHost) {
 
   CompositorManagerChild::OnGPUProcessLost(aHost->GetProcessToken());
   DestroyProcess(/* aUnexpectedShutdown */ true);
+
+  // If the process didn't live long enough, increment our unstable attempts
+  // counter so that we don't end up in a restart loop. If the process did live
+  // long enough, reset the counter so that we don't disable the process too
+  // eagerly.
+  if (IsProcessStable(TimeStamp::Now())) {
+    mUnstableProcessAttempts = 0;
+  } else {
+    mUnstableProcessAttempts++;
+    mozilla::glean::gpu_process::unstable_launch_attempts.Set(
+        mUnstableProcessAttempts);
+  }
 
   if (mUnstableProcessAttempts >
       uint32_t(StaticPrefs::layers_gpu_process_max_restarts())) {
